--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.19.1",
     "@ionic-native/status-bar": "^5.19.1",
     "@ionic/angular": "^4.11.8",
+    "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "core-js": "^2.5.4",
@@ -78,7 +79,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
