--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/camera": "^5.19.1",
     "@ionic-native/core": "^5.19.1",
+    "@ionic-native/dialogs": "^5.27.0",
     "@ionic-native/firebase": "^5.19.1",
+    "@ionic-native/network": "^5.27.0",
     "@ionic-native/splash-screen": "^5.19.1",
     "@ionic-native/status-bar": "^5.19.1",
     "@ionic/angular": "^4.11.8",
     "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-network-information": "^2.0.2",
     "core-js": "^2.5.4",
     "firebase": "^7.6.2",
     "rxjs": "^6.5.4",
@@ -76,7 +79,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "browser",
