--- a/package.json
+++ b/package.json
@@ -20,52 +20,53 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/camera": "^5.19.1",
-    "@ionic-native/core": "^5.19.1",
-    "@ionic-native/dialogs": "^5.27.0",
-    "@ionic-native/firebase": "^5.19.1",
-    "@ionic-native/network": "^5.27.0",
-    "@ionic-native/splash-screen": "^5.19.1",
-    "@ionic-native/status-bar": "^5.19.1",
-    "@ionic/angular": "^4.11.8",
+    "@ionic-native/camera": "^5.28.0",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/dialogs": "^5.28.0",
+    "@ionic-native/firebase": "^5.28.0",
+    "@ionic-native/network": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
+    "@ionic/angular": "^4.11.10",
     "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-network-information": "^2.0.2",
     "core-js": "^2.5.4",
-    "firebase": "^7.17.1",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.9.0",
+    "firebase": "^7.18.0",
+    "rxjs": "^6.6.2",
+    "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular-devkit/build-angular": "^0.803.29",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "8.1.3",
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "^2.1.2",
+    "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.2",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-windows": "^7.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
@@ -84,7 +85,8 @@
     },
     "platforms": [
       "browser",
-      "android"
+      "android",
+      "windows"
     ]
   }
 }
