--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cordova-plugin-network-information": "^2.0.2",
     "core-js": "^2.5.4",
     "firebase": "^7.18.0",
+    "pdfmake": "^0.1.68",
     "rxjs": "^6.6.2",
     "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
