--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/dialogs": "^5.28.0",
     "@ionic-native/firebase": "^5.28.0",
     "@ionic-native/network": "^5.28.0",
+    "@ionic-native/sms": "^5.28.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^4.11.10",
@@ -61,6 +62,7 @@
     "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sms-plugin": "^1.0.0",
     "cordova-windows": "^7.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -85,7 +87,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-network-information": {},
-      "mx.ferreyra.callnumber": {}
+      "mx.ferreyra.callnumber": {},
+      "cordova-sms-plugin": {}
     },
     "platforms": [
       "browser",
